Fixed: protractor does not reset in first two tabs
Fixed: protractor does not reset in prism break tab
Made velocity sensor node resize with text
Factored out CHARACTERISTIC_LENGTH instead of using WAVELENGTH_RED everywhere
Fixed: Made LaserColor.getWavelength() abstract and prevented from being called for white light
Fixed: Wavelength seems to get longer when moving to blue
Added another decimal point to the speed readout
Switched to protractor image with 1-degree tick marks
# 0.00.25 (49436) Mar 2, 2011
Started support for charting in wave sensor
Added a velocity vector arrow to the velocity sensor
Fixed: Velocity sensor shouldn't read 0.0 c in the toolbox
Fixed: When wave sensor comes out of toolbox, one probe should be centered on mouse
Fixed: Wave sensor should move all together when coming out of the toolbox.
Fixed layout of wave sensor in toolbox
Fixed: Wave sensor probes aren't exactly at 0, they are up by half a height
Fixed: Medium line should go behind the toolbox and tools
Fixed: Wave mode should change color with wavelength
Made rays change angle when wavelength changes
Moved dispersion functions to the base model class
Moved wave sensor to the toolbox
More tools tab: Moved laser and play area to the right
Added wires to the amplitude sensor
Started support for amplitude sensor
Made the velocity sensor accessible from the toolbox
Added a velocity sensor
Added a wavelength control to the "more tools" tab
Added stub for new "more tools" tab
# 0.00.24 (49343) Mar 1, 2011
Show visible spectrum only up to 700nm for red, before it starts looking too black, see #2763
Made prisms glass instead of water by default
Fixed: sim speed slider goes too fast on my computers. The useable ranges looks like its the 1st 20% or so, should be recalibrated
# 0.00.23 (49333) Feb 28, 2011
Improved support for white background
Fixed: laser is offscreen at some aspect ratios in the prism tab
Switched to white background instead of black
# 0.00.22 (49318) Feb 28, 2011